--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   http: ^0.13.3
   provider: ^5.0.0
   path_provider:
+  google_fonts:
+  cached_network_image: ^2.2.0+1
 
 dev_dependencies:
   flutter_test:
